# 3DReConstructionBackend

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  DEEPCAD_100K_RESULTS.md  DEEPCAD_10K_RESULTS.md  DRY_RUN_RESULTS.md  FRONTEND_API.md  README.md  RECONSTRUCTION_STRATEGIES.md  RELEASE_v1.0.2.md  TRAINING_STRATEGIES.md  TRAINING_TIME_ESTIMATES.md  main.py  pyproject.toml  requirements.txt  requirements_backup.txt  test_training_loss.py
config/: deepcad_100k_test.yaml  deepcad_10k_test.yaml  deepcad_1k_dryrun.yaml  finetune_config.yaml  settings.py  test_config.yaml
data/training/deepcad_1k/: README.md  dataset_info.json  rendering_metadata.json  tinyllava_metadata.json  train.json  train_val_split.json  val.json
docs/: TRAINING_API_ENDPOINTS.md
scripts/: README.md  convert_to_tinyllava.py  download_openecad_dataset.py  extract_deepcad_subset.py  minimal_training_test.py  monitor_100k_progress.sh  monitor_progress.sh  populate_models.py  render_deepcad_views.py  run_training.sh  sync_datasets_to_db.py  test_data_loader.py  test_mps_stability.py  test_training_pipeline.py
src/: __init__.py  pipeline.py
src/api/: __init__.py  server.py
src/database/: __init__.py  db.py  models.py
src/export/: __init__.py  exporter.py
src/ingestion/: __init__.py  loader.py  preprocessor.py
src/recognition/: __init__.py  element_detector.py
src/reconstruction/: __init__.py  builder.py  strategies.py  vlm_cad_strategy.py
src/training/: __init__.py  dataset.py  download_tracker.py  finetune.py  orthographic_renderer.py  trainer.py  utils.py  worker.py
src/validation/: __init__.py  cad_import.py  metrics.py  pipeline.py  projection.py
src/vectorization/: __init__.py  vectorizer.py
tests/: __init__.py  conftest.py  test_pipeline.py  test_strategy_b.py  test_training.py  test_validation.py  test_vlm_cad.py
